src/less/blocks/navigation.less
/*
 This file is a part of libertysoil.org website
 Copyright (C) 2016  Loki Education (Social Enterprise)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Affero General Public License for more details.

 You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
*/
.navigation {
  margin-bottom: 42px;
}

.navigation-item {
  @color-green: #7cdb9b;
  @color-blue: #66b6ec;
  @color-red: #fc2c5b;
  @color-lightgrey: #fafafa;

  margin: 1px 0;
  min-height: 42px;

  width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: center;

  font-size: 14px;
  color: #2c2c2c;

  &__content-wrapper {
    position: relative;
    display: flex;
    flex-grow: 1;
    align-self: stretch;
    margin-right: auto;
    overflow: hidden;
  }

  &__content-box {
    position: relative;
    display: flex;
    flex-grow: 1;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    align-self: stretch;
    overflow: hidden;
    transform: translateX(0px);

    > * {
      position: relative;
      left: 0px;
    }
  }

  &__content {
    align-self: center;
    padding-left: 20px;
    padding-right: 5px;
    overflow: hidden;
    flex: 1;
  }

  &__badge {
    position: relative;
    z-index: 2;
    display: inline-block;
    width: 20px;

    font-family: Verdana;
    font-size: 11px;

    .icon {
      width: 20px;
      height: 20px;
    }
  }

  &__icon {
    position: relative;
    margin-left: auto;
    z-index: 3;
    flex-basis: 42px;
    flex-shrink: 0;
    width: 42px;
    height: 42px;
    border-radius: 2px;
    color: #8e8e8e;
    background-color: @color-lightgrey;

    .icon--type_inner {
      width: 20px;
      height: 20px;
      font-size: 20px;
    }

    &--remind {
      border-radius: 0px;

      &::before {
        position: absolute;
        top: 0;
        bottom: 0;
        left: -4px;
        width: 4px;
        border-bottom-left-radius: 2px;
        border-top-left-radius: 2px;

        content: '';
      }
    }
  }

  &__switch {
    position: absolute;
    top: calc(~"50% - 7px");
    bottom: calc(~"50% - 7px");
    right: -13px;

    display: none;
    width: 4px;
    border-radius: 2px;
    transition-duration: 0.25s;
    transition-timing-function: ease-in-out;
    transition-property: top, bottom;

    &--truncated {
      top: calc(~"50% - 2px");
      bottom: calc(~"50% - 2px");
    }
  }

  // modifiers
  &--active {
    position: relative;
    pointer-events: none;

    .navigation-item__content-box {
      background-color: #fafafa;
    }

    .navigation-item__icon {
      color: #fff;
    }

    .navigation-item__switch {
      display: block;
      pointer-events: all;
    }
  }

  &--disabled {
    cursor: not-allowed;
    opacity: 0.5;
  }

  &--truncated {
    .navigation-item__content-box {
      display: none;
    }
  }

  &--transition {
    &-appear {
      transform: translateX(100%);

      &.navigation-item--transition-appear-active {
        transform: translateX(0px);
        transition: transform 0.25s ease-in-out;
      }
    }

    &-leave {
      transform: translateX(0px);

      &.navigation-item--transition-leave-active {
        transform: translateX(100%);
        transition: transform 0.25s ease-in-out;
      }
    }

    &-enter {
      transform: translateX(100%);

      &.navigation-item--transition-enter-active {
        transform: translateX(0px);
        transition: transform 0.25s ease-in-out;
      }
    }
  }

  &:hover:not(.navigation-item--active) {
    .navigation-item__content-box {
      color: #000;
    }
  }

  .color-modifier(@name, @color) {
    &--color_@{name} {
      .navigation-item__icon::before {
        background-color: @color;
      }

      &.navigation-item--active {
        .navigation-item__icon {
          background-color: @color;
        }

        .navigation-item__switch {
          background-color: @color;
        }
      }
    }
  }

  .color-modifier(@name: ~"blue", @color: @color-blue);
  .color-modifier(@name: ~"green", @color: @color-green);
  .color-modifier(@name: ~"red", @color: @color-red);
}

